--- a/statics/content/style.css
+++ b/statics/content/style.css
@@ -5,7 +5,22 @@
     margin-right: 5px;
     margin-left: 5px;
 }
-
+.sixteen-nine {
+  position: relative;
+}
+.sixteen-nine:before {
+  display: block;
+  content: "";
+  width: 100%;
+  padding-top: 56.25%;
+}
+.sixteen-nine > .content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
 /* FONTS */
 
 /* Google Lato - latin-ext */
@@ -58,91 +73,92 @@
     direction: rtl !important;
 }
 
-#wrapper {
-    max-width: 1054px;
-    margin-top: 56px;
- }
-
 #zone {
    margin: 0;
    padding-right: 4em;
    background: url(bg.png);
    background-size: cover;
    border: 0;
-   height: 710px;
+   height: 100%;
+   width: 80%;
 
 
 
 }
 
-#sidebar-wrapper {
+.categories-wrapper {
+  float: left;
   background: url(side-falch-overlay.png);
-  height: 710px;
+  height: 100%;
+  width: 20%;  
   background-size: cover;
   color: white;
   text-align: center;
 }
 
 
-.container-fluid {
-
-   padding-left: 0;
-}
-
-
-.sidebar-nav {
-  list-style: none;
-  padding:0;
-
-
-}
+.full-size {
+   height: 100%;
+   width: 100%;
+ }
 
 .category{
-   line-height:0;
-   text-indent: 0;
-   color: #999999;
-   display: block;
-   text-decoration: none;
-   border: 1px solid rgba(0, 0, 0, .1);
-   -webkit-background-clip: padding-box; /* for Safari */    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
-   padding: 72px 0px 68px 0px;
-   position: relatives;
-   font-size: 2.5rem;
-   text-align: center;
-   margin: 0;
+    color: #999999;
+    display: block;
+    text-decoration: none;
+    border: 1px solid rgba(0, 0, 0, .1);
+    font-size: 2vw;
+    padding-top: 20%;
+    text-align: center;
+    vertical-align: center;
+    margin: 0;
+    height: 20%;
+    width: 100%;
 }
+
 .category-done {
-   background: url(bg.png) no-repeat center;
-   background-size: cover;
-
+  background: url(bg.png) no-repeat center;
+  background-size: cover;
 }
 
-#question {
-
-    margin: 1.5em;
-    color: white;
-    opacity: 1;
-
+.question {
+  height: 10%;
+  margin: 1.5em;
+  color: white;
+  font-size: 3vw;
+  opacity: 1;
 }
-#btnHint{
-    background: url(remove-two-wrong-answers.png) no-repeat center ;
-    cursor:pointer;
-    border:none;
-    width:100px;
-    height:100px;
-    position: relatives;
-    margin-right: 40%;
 
+.answers {
+  height: 60%;
+}
 
+.helper-buttons-area{
+  width: 100%;
+  height: 30%;
+  text-align: center;
 }
-#btnSkip{
-    background: url(skip-question.png) no-repeat center;
-    cursor:pointer;
-    border:none;
-    width:100px;
-    height:100px;
-    position: relatives;
+
+.btn-hint{
+  display: inline-block;
+  background: url(remove-two-wrong-answers.png) no-repeat;
+  background-size: cover;
+  cursor:pointer;
+  border:none;
+  width: 8%;
+  height: 35%;
 }
+
+.btn-skip{
+  display: inline-block;
+  background: url(skip-question.png) no-repeat;
+  background-size: cover;
+  cursor:pointer;
+  border:none;
+  width: 8%;
+  height: 35%;
+}
+
 /* Answers */
 .answer-option {
     min-height: 80px;
